--- a/public/dashboard.css
+++ b/public/dashboard.css
@@ -97,7 +97,8 @@ body {
     color: white;
 
 }
-.anyname{
+
+.anyname {
     display: flex;
 }
 
@@ -147,11 +148,13 @@ main {
     height: 200px;
     /* display: flex; */
 }
-.secondflex{
+
+.secondflex {
     display: flex;
     /* margin-top: 20px; */
 }
-.secondfleximg{
+
+.secondfleximg {
     height: 290px;
     margin-top: 20px;
     width: 560px;
@@ -216,6 +219,7 @@ main {
     box-sizing: border-box;
     border-radius: 10px;
 }
+
 .mf-content {
     background-color: #fefefe;
     margin: auto;
@@ -265,6 +269,7 @@ select {
     width: 100%;
     height: 100%;
 }
+
 .trans-div {
     background-color: whitesmoke;
     margin: auto;
@@ -325,42 +330,51 @@ label {
     justify-content: center;
     display: flex;
 }
-.pay{
+
+.pay {
     display: flex;
-    justify-content: center;   
+    justify-content: center;
 }
+
 .pay p {
     color: rgb(242, 79, 0);
     font-weight: 200;
     font-size: 30px;
 }
-.submodaldiv{
+
+.submodaldiv {
     /* background-color: red; */
 }
-.Amount{
+
+.Amount {
     display: flex;
     align-items: center;
     padding: 10px;
     margin-left: 10px;
 }
+
 .Amount p {
     margin-left: 135px;
     /* color: yellow; */
 }
-.Amounts{
+
+.Amounts {
     display: flex;
     align-items: center;
     padding: 10px;
     margin-left: 10px;
 }
+
 .Amounts p {
     margin-left: 205px;
     /* color: yellow; */
 }
-.confirm{
+
+.confirm {
     margin-top: 25px;
 }
-.pindiv{
+
+.pindiv {
     margin-top: 20px;
 }
 
@@ -381,41 +395,45 @@ td {
 #fileInput {
     display: none;
 }
-#profilebtn{
+
+#profilebtn {
     background-color: rgb(242, 79, 0);
-    margin-left: 340px;
     border: none;
     width: 100px;
     height: 30px;
+    margin-left: 340px;
+    cursor: pointer;
 }
-.profilelabel{
+
+.profilelabel {
     color: white;
+    cursor: pointer;
 }
 
 .profilediv {
     width: 150px;
     height: 150px;
     background-color: rgb(242, 79, 0);
-    border-radius: 100%;
+    border-radius: 50%;
     margin-left: 310px;
-    /* right: 0; */
-    /* position: absolute; */
-
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .profileimage {
-    width: 150px;
-    height: 150px;
-    border-radius: 100%;
-    background-color: white;
+    width: 100%;
+    height: 100%;
+    border-radius: 50%;
+    object-fit: cover;
 }
 
 .allprofile {
-    /* background-color: black; */
     height: 190px;
-    /* margin-left: 90px; */
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 }
-
 /* #imgb{ */
 /* margin-top: px; */
 /* background-color:rgb(242, 79, 0);
@@ -716,6 +734,187 @@ td {
     margin-top: -4px;
 }
 
-@media screen {
-    
+
+
+.spinner-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(255, 255, 255, 0.8);
+    z-index: 1000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.spinner {
+    border: 12px solid #f3f3f3;
+    border-top: 12px solid rgb(242, 79, 0);
+    border-radius: 50%;
+    width: 80px;
+    height: 80px;
+    animation: spin 2s linear infinite;
+}
+
+@keyframes spin {
+    0% {
+        transform: rotate(0deg);
+    }
+
+    100% {
+        transform: rotate(360deg);
+    }
+}
+
+
+@media only screen and (max-width:800px) {
+    * {
+        margin: 0;
+        padding: 0;
+    }
+
+    body {
+        display: flex;
+    }
+
+    .maindiv {
+        display: flex;
+        width: 100%;
+        /* background-color: red; */
+        height: 100%;
+    }
+
+    .nav img {
+        height: 40px;
+    }
+
+    .nav {
+        width: 20%;
+        background-color: whitesmoke;
+        padding-left: 20px;
+        box-sizing: border-box;
+        cursor: pointer;
+    }
+
+    .media {
+        display: none;
+    }
+
+    .main {
+        display: flex;
+        /* flex-direction: column; */
+        /* background-color: purple; */
+        width: 80%;
+        height: 100vh;
+        /* padding-left: 20px; */
+    }
+
+    .account-balance {
+        width: 250px;
+        height: 70px;
+        /* background-color: blue; */
+        background-color: whitesmoke;
+        color: black;
+        border-radius: 10px;
+        margin-top: 20px;
+        padding-left: 20px;
+        box-sizing: border-box;
+    }
+
+    .img {
+        display: none;
+
+    }
+
+    .secondfleximg {
+        display: none;
+    }
+
+    .Welcome {
+        display: none;
+    }
+
+    #profilebtn {
+        margin-left: 5rem; /* Center the button */
+        width: 90px;    /* Adjust button width */
+    }
+
+    .profilediv {
+        width: 120px;  /* Reduce the profile image size */
+        height: 120px;
+        margin-left: 5rem; /* Center the profile image */
+    }
+
+    .profilelabel {
+        font-size: 14px; /* Adjust font size for better fit */
+    }
+    table,
+th,
+thead,
+tr,
+tbody,
+td {
+    padding: 10px;
+    border-collapse: collapse;
+    color: black;
+    /* border: 2px solid black; */
+    margin-top: 20px;
+    margin: auto;
+}
+.ms {
+    display: none;
+    position: fixed;
+    z-index: 1;
+    padding-top: 100px;
+    left: 0;
+    top: 0;
+    width: 100%;
+    height: 100%;
+    overflow: auto;
+    background-color: rgb(0, 0, 0);
+    background-color: rgba(0, 0, 0, 0.4);
+}
+
+.ms-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    padding-left: 30px;
+    width: 50%;
+    height: 50%;
+    box-sizing: border-box;
+    border-radius: 10px;
+}
+
+.mf-content {
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    padding-left: 30px;
+    width: 30%;
+    height: 75%;
+    box-sizing: border-box;
+    border-radius: 10px;
+}
+
+#mori {
+    cursor: pointer;
+}
+.mypin {
+    width: 20px;
+    height: 20px;
+    border-radius: 10px;
+    margin-left: 10px;
+
+}
+
+.pin {
+    display: flex;
+    /* align-items: center; */
+    justify-content: center;
+    /* margin-left: 35px; */
+
+}
 }
