--- a/public/login.css
+++ b/public/login.css
@@ -1,81 +1,87 @@
-input {
-    width: 330px;
-    height: 40px;
-    margin-top: 20px;
+body {
+    margin: 0;
+    padding: 0;
+    font-family: Arial, sans-serif;
+    background-color: #f4f4f4;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.main-div {
+    background-color: white;
     border-radius: 10px;
-    margin-left: 35px;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    width: 90%;
+    max-width: 400px;
+    padding: 20px;
+}
+
+.img-div img {
+    display: block;
+    margin: 0 auto;
+    height: 60px;
+}
+
+.second-div {
+    padding: 20px;
+    text-align: center;
+}
+
+input {
+    width: 100%;
+    padding: 10px;
+    margin: 10px 0;
+    border-radius: 5px;
+    border: 1px solid #ddd;
 }
 
 button {
-    width: 330px;
-    height: 40px;
+    width: 100%;
+    padding: 10px;
     margin-top: 20px;
-    border-radius: 10px;
-    margin-left: 35px;
-    color: white;
-    background-color: rgb(242, 79, 0);
     border: none;
-}
-.main-div {
+    background-color: rgb(242, 79, 0);
+    color: white;
+    font-weight: bold;
+    cursor: pointer;
     display: flex;
+    justify-content: center;
     align-items: center;
-    margin-top: 60px;
-}
-.second-div {
-    width: 400px;
-    height: 600px;
-    background-color: white;
-    margin-left: 150px;
+    position: relative;
 }
 
-@media only screen and (max-width: 600px) {
+button:disabled {
+    background-color: #ccc;
+    cursor: not-allowed;
+}
+
+.spinner-border {
+    margin-left: 10px;
+}
+
+@media (max-width: 600px) {
     .main-div {
-        display: block;
-        justify-content: center;
-
-    }
-
-    .img-div img {
-        height: 150px;
-        margin-left: 200px;
-    }
-
-    input {
-        width: 250px;
-        height: 40px;
-
-    }
-
-    .h3-signup {
-        margin-right: 50px;
+        width: 95%;
+        padding: 10px;
     }
 
     button {
-        width: 250px;
+        font-size: 14px;
     }
 }
 
-@media only screen and (min-width: 700px) and (max-width: 1000px) {
-    .main-div {
-        display: flex;
-        justify-content: center;
-    }
-
-    .img-div img {
-        height: 200px;
-        margin-left: 200px;
+@media (max-width: 400px) {
+    .second-div h3 {
+        font-size: 18px;
     }
 
     input {
-        width: 200px;
-        height: 40px;
+        padding: 8px;
     }
 
-    /* .h3-signup {
-        margin-right: 50px;
-    } */
-
     button {
-        width: 200px;
+        padding: 8px;
     }
 }
